--- a/pkgs/genui_client/pubspec.yaml
+++ b/pkgs/genui_client/pubspec.yaml
@@ -8,13 +8,15 @@ environment:
 
 dependencies:
   file: ^7.0.1
+  firebase_ai: ^2.2.1
+  firebase_app_check: ^0.3.0+1
+  firebase_auth: ^5.1.2
+  firebase_core: ^3.2.0
   flutter:
     sdk: flutter
-  google_generative_ai: ^0.4.7
   json_rpc_2: ^4.0.0
   platform: ^3.1.6
   stream_channel: ^2.1.4
-  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   dart_flutter_team_lints: ^3.5.2
