--- a/pkgs/genui_client/macos/Runner/Configs/AppInfo.xcconfig
+++ b/pkgs/genui_client/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = genui_client
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = dev.flutter.genuiClient
+PRODUCT_BUNDLE_IDENTIFIER = dev.flutter.genui.genuiClient
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 dev.flutter. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 dev.flutter.genui. All rights reserved.
