--- a/pkgs/genui_client/macos/Runner/GoogleService-Info.plist
+++ b/pkgs/genui_client/macos/Runner/GoogleService-Info.plist
@@ -2,20 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>686538628455-5fnq9mtf416g0jni848d1vsn0rti3iev.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDpykF61GD5fHfdSRrcDk_xnf1JTekkPLw</string>
+	<string>AIzaSyCxByPgKNTJc4Gc5N0w2l-I5ffE-dWkVKg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>686538628455</string>
+	<string>975757934897</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>dev.flutter.genuiClient</string>
+	<string>dev.flutter.genui.genuiClient</string>
 	<key>PROJECT_ID</key>
-	<string>agent-demo-tj</string>
+	<string>fluttergenui</string>
 	<key>STORAGE_BUCKET</key>
-	<string>agent-demo-tj.firebasestorage.app</string>
+	<string>fluttergenui.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -27,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:686538628455:ios:4611001336b1aad664a3c2</string>
+	<string>1:975757934897:ios:540a1a4eeeb57afb0ff010</string>
 </dict>
 </plist>
