--- a/pkgs/genui_client/windows/runner/Runner.rc
+++ b/pkgs/genui_client/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "dev.flutter" "\0"
+            VALUE "CompanyName", "dev.flutter.genui" "\0"
             VALUE "FileDescription", "genui_client" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "genui_client" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 dev.flutter. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 dev.flutter.genui. All rights reserved." "\0"
             VALUE "OriginalFilename", "genui_client.exe" "\0"
             VALUE "ProductName", "genui_client" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
