--- a/pkgs/genui_client/firebase.json
+++ b/pkgs/genui_client/firebase.json
@@ -1,1 +1,36 @@
-{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"fluttergenui","configurations":{"android":"1:975757934897:android:1735467a70fdea1d0ff010","ios":"1:975757934897:ios:540a1a4eeeb57afb0ff010","macos":"1:975757934897:ios:540a1a4eeeb57afb0ff010","web":"1:975757934897:web:818e744e0a7130da0ff010"}}},"android":{"default":{"projectId":"fluttergenui","appId":"1:975757934897:android:1735467a70fdea1d0ff010","fileOutput":"android/app/google-services.json"}},"macos":{"default":{"projectId":"fluttergenui","appId":"1:975757934897:ios:540a1a4eeeb57afb0ff010","uploadDebugSymbols":false,"fileOutput":"macos/Runner/GoogleService-Info.plist"}},"ios":{"default":{"projectId":"fluttergenui","appId":"1:975757934897:ios:540a1a4eeeb57afb0ff010","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "fluttergenui",
+          "configurations": {
+            "android": "1:975757934897:android:1735467a70fdea1d0ff010",
+            "macos": "1:975757934897:ios:540a1a4eeeb57afb0ff010",
+            "web": "1:975757934897:web:818e744e0a7130da0ff010"
+          }
+        }
+      },
+      "android": {
+        "default": {
+          "projectId": "fluttergenui",
+          "appId": "1:975757934897:android:1735467a70fdea1d0ff010",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "macos": {
+        "default": {
+          "projectId": "fluttergenui",
+          "appId": "1:975757934897:ios:540a1a4eeeb57afb0ff010",
+          "uploadDebugSymbols": false,
+          "fileOutput": "macos/Runner/GoogleService-Info.plist"
+        }
+      }
+    }
+  },
+  "hosting": {
+    "source": ".",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "frameworksBackend": { "region": "us-central1" }
+  }
+}
