Factor out llm_connection.dart
Add converation_widget.dart

Move conversation management logic into widget_tree_llm_adapter

Add loading spinner back

Fix pubspec

Misc code cleanups

Fix loading spinner

Move SDK code out of generic_chat to flutter_genui

Update CONTRIBUTING.md

Update .gitignore

Update pubspec.yaml

Update CONTRIBUTING.md

Update USAGE.md

Update README.md

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "example",
-            "cwd": "pkgs/examples/travel_app",
+            "name": "travel_app",
+            "cwd": "examples/travel_app",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            // "program": "lib/main.dart",
         },
         {
-            "name": "genui_client",
-            "cwd": "pkgs/examples/genui_client",
+            "name": "generic_chat",
+            "cwd": "examples/generic_chat",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            // "program": "lib/main.dart",
         },
     ]
 }
