--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -1,10 +1,12 @@
-name: example
+name: travel_app
+description: A Flutter travel app example using flutter_genui.
 publish_to: 'none'
 
 environment:
   sdk: ^3.9.0-196.0.dev
 
 dependencies:
+  firebase_core: ^3.15.2
   flutter:
     sdk: flutter
   flutter_genui:
