Hard code result widget. (#25)
* Update input.dart

* Update genui_widget.dart

* -

* -

* -

* -

--- a/pkgs/flutter_genui/pubspec.yaml
+++ b/pkgs/flutter_genui/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   json_rpc_2: ^4.0.0
   platform: ^3.1.6
   stream_channel: ^2.1.4
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   dart_flutter_team_lints: ^3.5.2
