--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -26,6 +26,8 @@ dev_dependencies:
   fake_async: ^1.3.3
   flutter_test:
     sdk: flutter
+  network_image_mock: ^2.1.1
+  mockito: ^5.4.4
 
 flutter:
   uses-material-design: true
