--- a/examples/travel_app_hardcoded/pubspec.yaml
+++ b/examples/travel_app_hardcoded/pubspec.yaml
@@ -3,7 +3,7 @@ description: A Flutter travel app example using flutter_genui.
 publish_to: 'none'
 
 environment:
-  sdk: ^3.9.0-196.0.dev
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   firebase_core: ^3.15.2
