--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "pkgs/spikes/dart_schema_builder/submodules/JSON-Schema-Test-Suite"]
-	path = pkgs/dart_schema_builder/submodules/JSON-Schema-Test-Suite
-	url = git@github.com:json-schema-org/JSON-Schema-Test-Suite.git
+[submodule "pkgs/dart_schema_builder/submodules/JSON-Schema-Test-Suite"]
+  path = pkgs/dart_schema_builder/submodules/JSON-Schema-Test-Suite
+  url = https://github.com/json-schema-org/JSON-Schema-Test-Suite.git
