--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -4,15 +4,15 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
   collection: ^1.19.1
   file: ^7.0.1
-  firebase_ai: ^2.2.1
-  firebase_app_check: ^0.3.0+1
-  firebase_auth: ^5.1.2
-  firebase_core: ^3.2.0
+  firebase_ai: ^3.0.0
+  firebase_app_check: ^0.4.0
+  firebase_auth: ^6.0.0
+  firebase_core: ^4.0.0
   flutter:
     sdk: flutter
   flutter_genui:
@@ -26,8 +26,8 @@ dev_dependencies:
   fake_async: ^1.3.3
   flutter_test:
     sdk: flutter
-  network_image_mock: ^2.1.1
   mockito: ^5.4.4
+  network_image_mock: ^2.1.1
 
 flutter:
   uses-material-design: true
