--- a/pkgs/dart_schema_builder/pubspec.yaml
+++ b/pkgs/dart_schema_builder/pubspec.yaml
@@ -3,7 +3,7 @@ description: A sample command-line application.
 version: 0.1.0
 
 environment:
-  sdk: ^3.9.0
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
   args: ^2.7.0
