--- a/pkgs/flutter_genui/pubspec.yaml
+++ b/pkgs/flutter_genui/pubspec.yaml
@@ -4,16 +4,16 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.8.0 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   collection: ^1.19.1
   file: ^7.0.1
-  firebase_ai: ^2.2.1
-  firebase_app_check: ^0.3.0+1
-  firebase_auth: ^5.1.2
-  firebase_core: ^3.2.0
+  firebase_ai: ^3.0.0
+  firebase_app_check: ^0.4.0
+  firebase_auth: ^6.0.0
+  firebase_core: ^4.0.0
   flutter:
     sdk: flutter
   json_rpc_2: ^4.0.0
