--- a/pkgs/spikes/fcp_client/pubspec.yaml
+++ b/pkgs/spikes/fcp_client/pubspec.yaml
@@ -5,7 +5,7 @@ homepage:
 publish_to: none
 
 environment:
-  sdk: ^3.10.0-28.0.dev
+  sdk: ">=3.8.0 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
