Add unit tests for `fluter_genui` package (#38)
Adds a bunch of unit tests for flutter_genui so we can make changes with confidence. It also introduces a GenerativeModelInterface class that abstracts the generative model somewhat, although the client is still Gemini-specific. It's just to make writing tests easier because Firebase AI Logic (unlike google_generative_ai) has no testing interface for GenerationConfig, and it's a final class, so it can't be mocked.

--- a/pkgs/flutter_genui/pubspec.yaml
+++ b/pkgs/flutter_genui/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter:
     sdk: flutter
   json_rpc_2: ^4.0.0
+  meta: ^1.16.0
   platform: ^3.1.6
   stream_channel: ^2.1.4
   url_launcher: ^6.2.6
@@ -25,4 +26,4 @@ dev_dependencies:
   dart_flutter_team_lints: ^3.5.2
   flutter_test:
     sdk: flutter
-  network_image_mock: any
+  network_image_mock: ^2.1.1
