--- a/pkgs/spikes/travel_app_hardcoded/pubspec.yaml
+++ b/pkgs/spikes/travel_app_hardcoded/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_genui:
     path: ../../flutter_genui
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   dart_flutter_team_lints: ^3.5.2
