--- a/pkgs/spikes/usage_test/.gitignore
+++ b/pkgs/spikes/usage_test/.gitignore
@@ -11,7 +11,6 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
-firepit-log.txt
 
 # IntelliJ related
 *.iml
@@ -31,8 +30,8 @@ firepit-log.txt
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-build/
-coverage/
+/build/
+/coverage/
 
 # Symbolication related
 app.*.symbols
