--- a/pkgs/spikes/usage_test/pubspec.yaml
+++ b/pkgs/spikes/usage_test/pubspec.yaml
@@ -3,7 +3,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.10.0-28.0.dev
+  sdk: ^3.8.0
 
 dependencies:
   cupertino_icons: ^1.0.8
