Reference minimal example in guidance. (#90)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,12 @@
             "type": "dart",
         },
         {
+            "name": "minimal_genui",
+            "cwd": "examples/minimal_genui",
+            "request": "launch",
+            "type": "dart",
+        },
+        {
             "name": "travel_app_hardcoded",
             "cwd": "pkgs/spikes/travel_app_hardcoded",
             "request": "launch",
