--- a/examples/minimal_genui/pubspec.yaml
+++ b/examples/minimal_genui/pubspec.yaml
@@ -1,17 +1,16 @@
-name: usage_test
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+name: minimal_genui
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
   sdk: ^3.8.0
 
 dependencies:
-  cupertino_icons: ^1.0.8
   firebase_core: ^4.0.0
   flutter:
     sdk: flutter
   flutter_genui:
-    path: ../../flutter_genui
+    path: ../../pkgs/flutter_genui
 
 dev_dependencies:
   dart_flutter_team_lints: ^3.5.2
