feat(travel_app, generic_chat): Add and enhance unit tests (#96)
* feat(travel_app): Add and enhance unit tests

Adds comprehensive unit tests for the travel_app package.

- Creates new tests for previously untested widgets:
  - `options_filter_chip.dart`
  - `section_header.dart`
- Enhances existing tests for better coverage and assertions:
  - `itinerary_item_test.dart`
  - `trailhead_test.dart`
  - `travel_carousel_test.dart`
  - `asset_images_test.dart`
- Cleans up unused test files and dependencies.

* Gemini Review Changes

--- a/examples/generic_chat/pubspec.yaml
+++ b/examples/generic_chat/pubspec.yaml
@@ -2,8 +2,8 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-name: genui_client
-description: "An app that generates user interfaces on the fly using AI."
+name: generic_chat
+description: "A generic chat app that generates user interfaces on the fly using AI."
 publish_to: "none"
 version: 0.1.0
 
