--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_app_check: ^0.4.0
   firebase_auth: ^6.0.0
   firebase_core: ^4.0.0
+  firebase_core_platform_interface: ^6.0.0
   flutter:
     sdk: flutter
   flutter_genui:
@@ -30,7 +31,7 @@ dev_dependencies:
   fake_async: ^1.3.3
   flutter_test:
     sdk: flutter
-  mockito: ^5.4.4
+  mockito: ^5.5.0
   network_image_mock: ^2.1.1
 
 flutter:
