--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -31,6 +31,8 @@ dev_dependencies:
   fake_async: ^1.3.3
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
   mockito: ^5.5.0
   network_image_mock: ^2.1.1
 
