--- a/pkgs/flutter_genui/pubspec.yaml
+++ b/pkgs/flutter_genui/pubspec.yaml
@@ -6,6 +6,7 @@ name: flutter_genui
 description: "Flutter GenUI"
 version: 0.0.1
 homepage:
+publish_to: none
 
 environment:
   sdk: ">=3.8.0 <4.0.0"
@@ -13,6 +14,8 @@ environment:
 
 dependencies:
   collection: ^1.19.1
+  dart_schema_builder:
+    path: ../dart_schema_builder
   file: ^7.0.1
   firebase_ai: ^3.0.0
   firebase_app_check: ^0.4.0
