--- a/examples/minimal_genui/macos/Runner/Configs/AppInfo.xcconfig
+++ b/examples/minimal_genui/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,7 +5,7 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = usage_test
+PRODUCT_NAME = minimal_genui
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = com.example.usageTest
