--- a/examples/minimal_genui/pubspec.yaml
+++ b/examples/minimal_genui/pubspec.yaml
@@ -1,5 +1,5 @@
 name: minimal_genui
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line when we're ready to publish to pub.dev
 version: 1.0.0+1
 
 environment:
