--- a/pkgs/flutter_genui/pubspec.yaml
+++ b/pkgs/flutter_genui/pubspec.yaml
@@ -3,9 +3,11 @@
 # found in the LICENSE file.
 
 name: flutter_genui
-description: "Flutter GenUI"
-version: 0.0.1
-homepage:
+description: Generates and displays generative user interfaces (GenUI) in Flutter using AI.
+version: 0.1.0
+homepage: https://github.com/flutter/genui/pkgs/flutter_genui
+license: BSD-3-Clause
+issue_tracker: https://github.com/flutter/genui/issues
 publish_to: none
 
 environment:
