--- a/pkgs/spikes/fcp_client/example/pubspec.yaml
+++ b/pkgs/spikes/fcp_client/example/pubspec.yaml
@@ -1,7 +1,3 @@
-# Copyright 2025 The Flutter Authors. All rights reserved.
-# Use of this source code is governed by a BSD-style license that can be
-# found in the LICENSE file.
-
 name: fcp_client_example
 description: An example app for the fcp_client package.
 publish_to: "none"
@@ -18,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_driver:
     sdk: flutter
+  dart_schema_builder:
+    path: ../../../dart_schema_builder
 
 dev_dependencies:
   test: ^1.26.2
