--- a/pkgs/spikes/fcp_client/pubspec.yaml
+++ b/pkgs/spikes/fcp_client/pubspec.yaml
@@ -1,7 +1,3 @@
-# Copyright 2025 The Flutter Authors. All rights reserved.
-# Use of this source code is governed by a BSD-style license that can be
-# found in the LICENSE file.
-
 name: fcp_client
 description: "A new Flutter package project."
 version: 0.1.0
@@ -13,6 +9,9 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  collection: ^1.19.1
+  dart_schema_builder:
+    path: ../../dart_schema_builder
   file: ^7.0.1
   flutter:
     sdk: flutter
