--- a/examples/minimal_genui/pubspec.yaml
+++ b/examples/minimal_genui/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_genui:
     path: ../../pkgs/flutter_genui
+  logging: ^1.3.0
 
 dev_dependencies:
   dart_flutter_team_lints: ^3.5.2
