--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_genui:
     path: ../../pkgs/flutter_genui
   json_rpc_2: ^4.0.0
+  logging: ^1.3.0
   platform: ^3.1.6
   stream_channel: ^2.1.4
 
