--- a/pkgs/flutter_genui/pubspec.yaml
+++ b/pkgs/flutter_genui/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter:
     sdk: flutter
   json_rpc_2: ^4.0.0
+  logging: ^1.3.0
   meta: ^1.16.0
   platform: ^3.1.6
   stream_channel: ^2.1.4
