Move schema to separate folder and exempt from cycle validation. (#178)

--- a/.github/workflows/flutter_packages.yaml
+++ b/.github/workflows/flutter_packages.yaml
@@ -146,4 +146,6 @@ jobs:
       # TODO: uncomment after fixing cycles
       # - name: Check for cycles
       #   working-directory: ${{ matrix.package.path }}
-      #   run: dart pub global activate layerlens && layerlens --fail-on-cycles
+      #   run: |
+      #     dart pub global activate layerlens
+      #     layerlens --fail-on-cycles  --except "lib/src/schema"
