--- a/examples/travel_app/analysis_options.yaml
+++ b/examples/travel_app/analysis_options.yaml
@@ -3,3 +3,7 @@
 # found in the LICENSE file.
 
 include: package:dart_flutter_team_lints/analysis_options.yaml
+
+linter:
+  rules:
+    - unawaited_futures
