Clean up some files. (#189)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# These files are regularly auto-updated, but they should not be ignored:
+# **/project.pbxproj
+# **/settings.gradle.kts
+# **/build.gradle.kts
+
 # Miscellaneous
 *.class
 *.log
@@ -36,7 +41,9 @@ DEPS.md
 **/GeneratedPluginRegistrant.*
 **/generated_plugin_registrant.*
 **/Podfile
+**/Podfile.lock
 **/Runner-Bridging-Header.h
+**/contents.xcworkspacedata
 
 # Symbolication related
 app.*.symbols
