--- a/examples/simple_chat/pubspec.yaml
+++ b/examples/simple_chat/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^4.0.0
   flutter_genui:
     path: ../../packages/flutter_genui
+  logging: ^1.3.0
 
 dev_dependencies:
   flutter_test:
