--- a/packages/catalog_gallery/pubspec.yaml
+++ b/packages/catalog_gallery/pubspec.yaml
@@ -1,3 +1,7 @@
+# Copyright 2025 The Flutter Authors. All rights reserved.
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
 name: catalog_gallery
 publish_to: 'none'
 version: 1.0.0+1
