--- a/packages/spikes/fcp_client/test_fixtures/m1_integration/linux/flutter/CMakeLists.txt
+++ b/packages/spikes/fcp_client/test_fixtures/m1_integration/linux/flutter/CMakeLists.txt
@@ -1,3 +1,7 @@
+# Copyright 2025 The Flutter Authors. All rights reserved.
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
 # This file controls Flutter-level build steps. It should not be edited.
 cmake_minimum_required(VERSION 3.10)
 
