--- a/tool/fix_copyright/pubspec.yaml
+++ b/tool/fix_copyright/pubspec.yaml
@@ -1,3 +1,7 @@
+# Copyright 2025 The Flutter Authors. All rights reserved.
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
 name: fix_copyright
 description: A command line app to fix copyright headers.
 version: 0.1.0
