--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
     sdk: flutter
   flutter_genui:
     path: ../../packages/flutter_genui
+  flutter_markdown: ^0.7.1
   json_rpc_2: ^4.0.0
   logging: ^1.3.0
   platform: ^3.1.6
