--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -15,15 +15,15 @@ dependencies:
   dart_schema_builder:
     path: ../../packages/dart_schema_builder
   file: ^7.0.1
-  firebase_ai: ^3.0.0
   firebase_app_check: ^0.4.0
-  firebase_auth: ^6.0.0
   firebase_core: ^4.0.0
   firebase_core_platform_interface: ^6.0.0
   flutter:
     sdk: flutter
   flutter_genui:
     path: ../../packages/flutter_genui
+  flutter_genui_firebase_ai:
+    path: ../../packages/flutter_genui_firebase_ai
   flutter_markdown: ^0.7.1
   json_rpc_2: ^4.0.0
   logging: ^1.3.0
