--- a/examples/catalog_gallery/pubspec.yaml
+++ b/examples/catalog_gallery/pubspec.yaml
@@ -13,9 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_genui:
-    path: ../flutter_genui
-  travel_app:
-    path: ../../examples/travel_app
+    path: ../../packages/flutter_genui
 
 dev_dependencies:
   dart_flutter_team_lints: ^3.5.2
