--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_genui_firebase_ai:
     path: ../../packages/flutter_genui_firebase_ai
   flutter_markdown: ^0.7.1
+  intl: ^0.20.2
   logging: ^1.3.0
 
 dev_dependencies:
@@ -36,3 +37,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/travel_images/
+    - assets/booking_service/
