--- a/tool/fix_copyright/pubspec.yaml
+++ b/tool/fix_copyright/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dart_flutter_team_lints: ^3.5.2
   file: ^7.0.1
   path: ^1.9.0
+  process: ^5.0.5
 
 dev_dependencies:
   lints: ^6.0.0
