--- a/packages/spikes/gulf_client/pubspec.yaml
+++ b/packages/spikes/gulf_client/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   freezed_annotation: ^3.1.0
@@ -24,5 +25,6 @@ dev_dependencies:
     sdk: flutter
   freezed: ^3.2.3
   json_serializable: ^6.11.1
+  mockito: ^5.5.1
 
 flutter:
