--- a/.github/workflows/flutter_packages.yaml
+++ b/.github/workflows/flutter_packages.yaml
@@ -14,6 +14,7 @@ on:
       - ".github/workflows/flutter_packages.yaml"
       - "packages/**"
       - "examples/**"
+      - "tool/**"
   pull_request:
     branches:
       - main
@@ -21,6 +22,7 @@ on:
       - ".github/workflows/flutter_packages.yaml"
       - "packages/**"
       - "examples/**"
+      - "tool/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
