--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
     path: ../../packages/flutter_genui
   flutter_genui_firebase_ai:
     path: ../../packages/flutter_genui_firebase_ai
-  flutter_markdown: ^0.7.1
+  gpt_markdown: ^1.1.4
   intl: ^0.20.2
   logging: ^1.3.0
 
