--- a/packages/spikes/gulf_client/example/pubspec.yaml
+++ b/packages/spikes/gulf_client/example/pubspec.yaml
@@ -13,8 +13,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^6.3.1
+  gpt_markdown: ^1.1.4
   gulf_client:
     path: ../
+  logging: ^1.3.0
+  provider: ^6.1.5+1
 
 dev_dependencies:
   dart_flutter_team_lints: ^3.5.2
