--- a/packages/spikes/gulf_client/pubspec.yaml
+++ b/packages/spikes/gulf_client/pubspec.yaml
@@ -12,11 +12,19 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  a2a:
+    # TODO: Update this to depend on the pub package after
+    # https://github.com/shamblett/a2a/pull/39 is merged and published.
+    git:
+      url: https://github.com/jacobsimionato/shamblett-a2a.git
+      ref: client-extensions
   equatable: ^2.0.7
   flutter:
     sdk: flutter
   freezed_annotation: ^3.1.0
+  http: ^1.5.0
   json_annotation: ^4.9.0
+  logging: ^1.3.0
 
 dev_dependencies:
   build_runner: ^2.8.0
