--- a/packages/spikes/gulf_genkit_eval/package.json
+++ b/packages/spikes/gulf_genkit_eval/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "@genkit-ai/compat-oai": "^1.19.2",
-    "@genkit-ai/google-genai": "^1.19.2",
+    "@genkit-ai/google-genai": "^1.19.3",
+    "@genkit-ai/vertexai": "^1.19.3",
     "genkit": "^1.19.2",
     "genkitx-anthropic": "^0.25.0"
   }
