--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -11,8 +11,6 @@ environment:
   sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
-  dart_schema_builder:
-    path: ../../packages/dart_schema_builder
   firebase_app_check: ^0.4.0
   firebase_core: ^4.0.0
   flutter:
@@ -23,6 +21,8 @@ dependencies:
     path: ../../packages/flutter_genui_firebase_ai
   gpt_markdown: ^1.1.4
   intl: ^0.20.2
+  json_schema_builder:
+    path: ../../packages/json_schema_builder
   logging: ^1.3.0
 
 dev_dependencies:
