--- a/packages/spikes/fcp_client/pubspec.yaml
+++ b/packages/spikes/fcp_client/pubspec.yaml
@@ -14,13 +14,13 @@ environment:
 
 dependencies:
   collection: ^1.19.1
-  dart_schema_builder:
-    path: ../../dart_schema_builder
   file: ^7.0.1
   flutter:
     sdk: flutter
   json_patch: ^3.0.0
   json_schema: ^5.2.1
+  json_schema_builder:
+    path: ../../json_schema_builder
   platform: ^3.1.6
 
 dev_dependencies:
