Make the package web compatible. (#359)

--- a/packages/json_schema_builder/pubspec.yaml
+++ b/packages/json_schema_builder/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   decimal: ^3.2.4
   http: ^1.4.0
   intl: ^0.20.2
+  meta: ^1.17.0
 
 dev_dependencies:
   dart_flutter_team_lints: ^3.5.2
