--- a/examples/simple_chat/macos/Runner/Configs/AppInfo.xcconfig
+++ b/examples/simple_chat/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = simple_chat
+PRODUCT_NAME = genui_client
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.simpleChat
+PRODUCT_BUNDLE_IDENTIFIER = dev.flutter.genui.genuiClient
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example.
+PRODUCT_COPYRIGHT = Copyright © 2025 dev.flutter.genui.
