--- a/examples/catalog_gallery/macos/Runner/Configs/AppInfo.xcconfig
+++ b/examples/catalog_gallery/macos/Runner/Configs/AppInfo.xcconfig
@@ -11,4 +11,4 @@ PRODUCT_NAME = catalog_gallery
 PRODUCT_BUNDLE_IDENTIFIER = com.example.catalogGallery
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
