--- a/examples/catalog_gallery/pubspec.yaml
+++ b/examples/catalog_gallery/pubspec.yaml
@@ -14,8 +14,7 @@ dependencies:
     sdk: flutter
   flutter_genui:
     path: ../../packages/flutter_genui
-  json_schema_builder:
-    path: ../../packages/json_schema_builder
+  json_schema_builder: ^0.1.3
 
 dev_dependencies:
   dart_flutter_team_lints: ^3.5.2
