--- a/examples/custom_backend/pubspec.yaml
+++ b/examples/custom_backend/pubspec.yaml
@@ -16,8 +16,7 @@ dependencies:
     path: ../../packages/flutter_genui
   http: ^1.5.0
   intl: ^0.20.2
-  json_schema_builder:
-    path: ../../packages/json_schema_builder
+  json_schema_builder: ^0.1.3
 
 dev_dependencies:
   build_runner: ^2.9.0
