--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -21,8 +21,7 @@ dependencies:
     path: ../../packages/flutter_genui_firebase_ai
   gpt_markdown: ^1.1.4
   intl: ^0.20.2
-  json_schema_builder:
-    path: ../../packages/json_schema_builder
+  json_schema_builder: ^0.1.3
   logging: ^1.3.0
 
 dev_dependencies:
