--- a/packages/spikes/fcp_client/example/pubspec.yaml
+++ b/packages/spikes/fcp_client/example/pubspec.yaml
@@ -18,8 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_driver:
     sdk: flutter
-  json_schema_builder:
-    path: ../../../json_schema_builder
+  json_schema_builder: ^0.1.3
 
 dev_dependencies:
   test: ^1.26.2
