--- a/packages/spikes/fcp_client/pubspec.yaml
+++ b/packages/spikes/fcp_client/pubspec.yaml
@@ -19,8 +19,7 @@ dependencies:
     sdk: flutter
   json_patch: ^3.0.0
   json_schema: ^5.2.1
-  json_schema_builder:
-    path: ../../json_schema_builder
+  json_schema_builder: ^0.1.3
   platform: ^3.1.6
 
 dev_dependencies:
