--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -10,6 +10,8 @@ version: 0.1.0
 environment:
   sdk: ">=3.8.0 <4.0.0"
 
+resolution: workspace
+
 dependencies:
   firebase_app_check: ^0.4.0
   firebase_core: ^4.0.0
