--- a/packages/flutter_genui/pubspec.yaml
+++ b/packages/flutter_genui/pubspec.yaml
@@ -14,6 +14,8 @@ environment:
   sdk: ">=3.8.0 <4.0.0"
   flutter: ">=1.17.0"
 
+resolution: workspace
+
 dependencies:
   collection: ^1.19.1
   flutter:
