--- a/packages/flutter_genui_firebase_ai/pubspec.yaml
+++ b/packages/flutter_genui_firebase_ai/pubspec.yaml
@@ -14,6 +14,8 @@ environment:
   sdk: ">=3.8.0 <4.0.0"
   flutter: ">=1.17.0"
 
+resolution: workspace
+
 dependencies:
   firebase_ai: ^3.2.0
   flutter:
