--- a/packages/json_schema_builder/pubspec.yaml
+++ b/packages/json_schema_builder/pubspec.yaml
@@ -12,6 +12,8 @@ issue_tracker: https://github.com/flutter/genui/issues
 environment:
   sdk: ">=3.8.0 <4.0.0"
 
+resolution: workspace
+
 dependencies:
   args: ^2.7.0
   characters: ^1.4.0
