--- a/packages/flutter_genui_a2ui/pubspec.yaml
+++ b/packages/flutter_genui_a2ui/pubspec.yaml
@@ -9,12 +9,19 @@ version: 0.1.0
 
 environment:
   sdk: ">=3.9.2 <4.0.0"
-  flutter: ">3.37.0"
+  flutter: ">=3.35.7 <4.0.0"
 
 resolution: workspace
 
 dependencies:
-  a2a: ^3.0.0
+  # Revert to the published version when the following PRs have landed:
+  # https://github.com/shamblett/a2a/pull/53
+  # https://github.com/shamblett/a2a/pull/52
+  # a2a: ^3.0.0
+  a2a:
+    git:
+      url: https://github.com/gspencergoog/shamblett_a2a.git
+      ref: genui
   flutter:
     sdk: flutter
   flutter_genui:
