--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,12 @@ publish_to: none
 
 environment:
   sdk: ">=3.9.2 <4.0.0"
-  flutter: ">3.37.0"
+  flutter: ">=3.35.7 <4.0.0"
 
 workspace:
   - packages/flutter_genui
   - packages/flutter_genui_a2ui
+  - packages/flutter_genui_a2ui/example
   - packages/flutter_genui_firebase_ai
   - packages/json_schema_builder
   - examples/catalog_gallery
