--- a/examples/catalog_gallery/pubspec.yaml
+++ b/examples/catalog_gallery/pubspec.yaml
@@ -8,7 +8,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=3.9.2 <4.0.0"
-  flutter: ">=3.35.7"
+  flutter: ">=3.35.7 <4.0.0"
 
 resolution: workspace
 
