--- a/examples/custom_backend/pubspec.yaml
+++ b/examples/custom_backend/pubspec.yaml
@@ -8,7 +8,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=3.9.2 <4.0.0"
-  flutter: ">=3.35.7"
+  flutter: ">=3.35.7 <4.0.0"
 
 resolution: workspace
 
@@ -22,11 +22,11 @@ dependencies:
   json_schema_builder: ^0.1.3
 
 dev_dependencies:
-  build_runner: ^2.9.0
+  build_runner: ^2.7.1
   dart_flutter_team_lints: ^3.5.2
   flutter_test:
     sdk: flutter
-  mockito: ^5.5.1
+  mockito: ^5.5.0
 
 flutter:
   uses-material-design: true
