--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -9,7 +9,7 @@ version: 0.1.0
 
 environment:
   sdk: ">=3.9.2 <4.0.0"
-  flutter: ">=3.35.7"
+  flutter: ">=3.35.7 <4.0.0"
 
 resolution: workspace
 
