--- a/packages/flutter_genui_a2ui/example/pubspec.yaml
+++ b/packages/flutter_genui_a2ui/example/pubspec.yaml
@@ -9,7 +9,9 @@ version: 0.1.0
 
 environment:
   sdk: ">=3.9.2 <4.0.0"
-  flutter: ">=3.35.7"
+  flutter: ">=3.35.7 <4.0.0"
+
+resolution: workspace
 
 dependencies:
   flutter:
@@ -24,6 +26,3 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-
-flutter:
-  uses-material-design: true
