--- a/packages/flutter_genui/pubspec.yaml
+++ b/packages/flutter_genui/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   collection: ^1.19.1
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.7.7+1
   json_schema_builder: ^0.1.3
   logging: ^1.3.0
 
