Clean up documentation (#511)

--- a/packages/flutter_genui_google_generative_ai/pubspec.yaml
+++ b/packages/flutter_genui_google_generative_ai/pubspec.yaml
@@ -4,7 +4,7 @@
 
 name: flutter_genui_google_generative_ai
 description: Integration package for flutter_genui and Google Cloud Generative Language API.
-version: 0.1.0
+version: 0.5.0
 homepage: https://github.com/flutter/genui/packages/flutter_genui_google_generative_ai
 license: BSD-3-Clause
 issue_tracker: https://github.com/flutter/genui/issues
@@ -19,8 +19,7 @@ resolution: workspace
 dependencies:
   flutter:
     sdk: flutter
-  flutter_genui:
-    path: ../flutter_genui
+  flutter_genui: ^0.5.0
   google_cloud_ai_generativelanguage_v1beta: ^0.1.0
   google_cloud_protobuf: ^0.1.0
   json_schema_builder: ^0.1.3
