--- a/packages/flutter_genui_a2ui/pubspec.yaml
+++ b/packages/flutter_genui_a2ui/pubspec.yaml
@@ -4,8 +4,10 @@
 
 name: flutter_genui_a2ui
 description: Integration package for flutter_genui and A2UI Streaming UI Protocol.
-publish_to: "none"
-version: 0.1.0
+version: 0.5.0
+homepage: https://github.com/flutter/genui/packages/flutter_genui_a2ui
+license: BSD-3-Clause
+issue_tracker: https://github.com/flutter/genui/issues
 
 environment:
   sdk: ">=3.9.2 <4.0.0"
@@ -17,7 +19,7 @@ dependencies:
   a2a: ^3.1.0
   flutter:
     sdk: flutter
-  flutter_genui: ^0.4.0
+  flutter_genui: ^0.5.0
   json_schema_builder: ^0.1.3
   logging: ^1.3.0
   uuid: ^4.5.1
