--- a/examples/travel_app/pubspec.yaml
+++ b/examples/travel_app/pubspec.yaml
@@ -14,12 +14,12 @@ environment:
 resolution: workspace
 
 dependencies:
-  firebase_app_check: ^0.4.0
-  firebase_core: ^4.0.0
+  firebase_app_check: ^0.4.1+2
+  firebase_core: ^4.2.1
   flutter:
     sdk: flutter
-  genui: ^0.5.0
-  genui_firebase_ai: ^0.5.0
+  genui: ^0.5.1
+  genui_firebase_ai: ^0.5.1
   gpt_markdown: ^1.1.4
   intl: ^0.20.2
   json_schema_builder: ^0.1.3
