--- a/packages/genui/pubspec.yaml
+++ b/packages/genui/pubspec.yaml
@@ -4,8 +4,8 @@
 
 name: genui
 description: Generates and displays generative user interfaces (GenUI) in Flutter using AI.
-version: 0.5.0
-homepage: https://github.com/flutter/genui/packages/genui
+version: 0.5.1
+homepage: https://github.com/flutter/genui/tree/main/packages/genui
 license: BSD-3-Clause
 issue_tracker: https://github.com/flutter/genui/issues
 
@@ -19,7 +19,7 @@ dependencies:
   collection: ^1.19.1
   flutter:
     sdk: flutter
-  flutter_markdown: ^0.7.7+1
+  flutter_markdown_plus: ^1.0.5
   json_schema_builder: ^0.1.3
   logging: ^1.3.0
 
